# process_flux

./: .gitignore  CMakeLists.txt  submit.py  wrapper.sh
include/: McRW.hpp  Utils.hpp
py/: process_flux.py  process_flux_new.py  test.py
py/mypy/: constants.py  figure_setup.py  process.py  process_data.py  process_mc.py  pyroot_utils.py  pyspline.py  utils.py
src/: McRW.cpp
